# crew_ai_sales_pitch_agentic_system

./: base.ipynb  pyproject.toml
