[tool.poetry]
name = "sales-pitch-crewai-tutorial"
version = "0.1.0"
description = ""
authors = ["Princekrampah <jsksprince@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = "0.28.8"
crewai_tools = "0.1.6"
langchain_community = "0.0.29"
duckduckgo-search = "^6.1.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
